--- a/index.html
+++ b/index.html
@@ -74,7 +74,90 @@
       </div>
     </header>
     <!-- end header section -->
-     
+    <main>
+      <!-- start featured product section -->
+        <section class="featured-product text-center">
+            <h2>Featured Products</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="product">   
+                        <div class="img">
+                            <img src="./assets/images/featured-section-imgs/chair-1.webp" alt=""/>
+                        </div>
+                        <div class="product-details">
+                            <h3 class="text-primary">Cantilever chair</h3>
+                            <div class="color-option">
+                                <button class="color color-one"></button>
+                                <button class="color color-two"></button>
+                                <button class="color color-three"></button>
+                            </div>
+                            <div class="product-info d-flex flex-direction gap-2">
+                                <span class="text-secondary">Code - Y523201</span>
+                                <span class="text-secondary">$42.00</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product">
+
+                         <div class="badge-sale">
+                            <img src="./assets/images/featured-section-imgs/Group 27.png" alt=""/>
+                         </div>
+
+                        <div class="img">
+                            <img src="./assets/images/featured-section-imgs/image 1.webp" alt=""/>
+                        </div>
+                        <div class="product-details">
+                            <h3 class="text-primary">Cantilever chair</h3>
+                            <div class="color-option">
+                                <button class="color color-one"></button>
+                                <button class="color color-two"></button>
+                                <button class="color color-three"></button>
+                            </div>
+                            <div class="product-info d-flex flex-direction gap-2">
+                                <span class="text-secondary">Code - Y523201</span>
+                                <span class="text-secondary">$42.00</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <div class="img">
+                            <img src="./assets/images/featured-section-imgs/image 1169.webp" alt=""/>
+                        </div>
+                        <div class="product-details">
+                            <h3 class="text-primary">Cantilever chair</h3>
+                            <div class="color-option">
+                                <button class="color color-one"></button>
+                                <button class="color color-two"></button>
+                                <button class="color color-three"></button>
+                            </div>
+                            <div class="product-info d-flex flex-direction gap-2">
+                                <span class="text-secondary">Code - Y523201</span>
+                                <span class="text-secondary">$42.00</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <div class="img">
+                            <img src="./assets/images/featured-section-imgs/image 3.webp" alt=""/>
+                        </div>
+                        <div class="product-details">
+                            <h3 class="text-primary">Cantilever chair</h3>
+                            <div class="color-option">
+                                <button class="color color-one"></button>
+                                <button class="color color-two"></button>
+                                <button class="color color-three"></button>
+                            </div>
+                            <div class="product-info d-flex flex-direction gap-2">
+                                <span class="text-secondary">Code - Y523201</span>
+                                <span class="text-secondary">$42.00</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end featured product section -->
+    </main>
     <!-- start footer section -->
     <footer class="footer">
       <div class="container">
