create newsletter section

--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
             </div>
         </section>
         <!-- end featured product section -->
+        <!-- start newsletter section -->
+        <section class="newsletter">
+            <h2>Get Leatest Update By Subscribe our Newslater</h2>
+            <a class="btn btn-primary shop-btn" href="#">shop now</a>
+        </section>
+        <!-- end newsletter section -->
     </main>
     <!-- start footer section -->
     <footer class="footer">
