create clients section

--- a/index.html
+++ b/index.html
@@ -163,6 +163,32 @@
             <a class="btn btn-primary shop-btn" href="#">shop now</a>
         </section>
         <!-- end newsletter section -->
+         <!-- start clients section -->
+        <section class="clients">
+            <div class="container">
+                <div class="row">
+                    <div class="logo">
+                        <img src="./assets/images/clients-section-imgs/client.webp" alt="" />
+                    </div>
+                    <div class="logo">
+                        <img src="./assets/images/clients-section-imgs/client.webp" alt="" />
+                    </div>
+                    <div class="logo">
+                        <img src="./assets/images/clients-section-imgs/client.webp" alt="" />
+                    </div>
+                    <div class="logo">
+                        <img src="./assets/images/clients-section-imgs/client.webp" alt="" />
+                    </div>
+                    <div class="logo">
+                        <img src="./assets/images/clients-section-imgs/client.webp" alt="" />
+                    </div>
+                    <div class="logo">
+                        <img src="./assets/images/clients-section-imgs/client.webp" alt="" />
+                    </div>
+                </div>
+            </div>
+        </section>
+         <!-- end clients section -->
     </main>
     <!-- start footer section -->
     <footer class="footer">
