--- a/index.html
+++ b/index.html
@@ -75,6 +75,31 @@
     </header>
     <!-- end header section -->
     <main>
+      <!-- start hero section -->
+      <section class="hero">
+        <div class="container">
+          <div class="row">
+            <div class="hero-content">
+              <div class="hero-lamp">
+                <img src="./assets/images/hero-section/lamp.png" alt="" />
+              </div>
+              <div class="text-content">
+                <p class="text-primary">Best Furniture For Your Castle....</p>
+                <h1>New Furniture Collection Trends in 2020</h1>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Magna
+                  in est adipiscing in phasellus non in justo.
+                </p>
+                <a class="btn btn-primary" href="#">Shop Now</a>
+              </div>
+            </div>
+            <div class="hero-img">
+              <img src="./assets/images/hero-section/sofa promotional header.webp" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end hero section -->
       <!-- start featured product section -->
         <section class="featured-product text-center">
             <h2>Featured Products</h2>
